--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.7.2
 beautifulsoup4==4.12.2
 dj-static==0.0.6
-Django==4.2.2
+Django
 django-bootstrap-v5==1.0.11
 django-bootstrap5==23.3
 django-stdimage==6.0.1
